[package]
name = "app"
version = "0.1.0"
authors = ["frozenScout <sasha.klokov.2000@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
server = { path = "/Users/aleksandrklokov/Documents/projects/rust/diplom_project/server" }
libloading = "0.5"
